# FisherAI

./: .gitignore  README  README.md  ai_model.py  chess_gui.py  compare_boards.py  fisher_config.json  main.py  process_dataset.py  pyproject.toml  requirements.txt
fisher_ai/: __init__.py  __main__.py  benchmark.py  benchmark_components.py  benchmark_metrics.py  checkpoint.py  cli.py  config.py  dataset.py  distributed.py  encoding.py  evaluate.py  game.py  generation.py  learner_worker.py  mcts.py  network.py  notifications.py  pipeline.py  replay.py  self_play.py  trainer.py  uci.py
fisher_ai/chess/: NOTICE  __init__.py  _tables.py  bitboards.py  board.py  engine.py  move.py
gui/: main.py
legacy/: hf_model.py  main.py
tests/: test_benchmark.py  test_checkpoint.py  test_chess.py  test_cli.py  test_dataset.py  test_distributed.py  test_encoding.py  test_generation.py  test_gui.py  test_learner_worker.py  test_mcts.py  test_network.py  test_notifications.py  test_pipeline.py  test_replay.py  test_self_play.py  test_trainer.py
v2/: ai_model2.py
weights/: weights_30-Oct-2025_09-44.pt
