[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fisher-ai"
version = "0.3.0"
description = "AlphaZero-style chess engine trained entirely through self-play"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=2.0",
    "lmdb>=1.5",
    "zstandard>=0.23",
    "pygame>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
fisher-ai = "fisher_ai.cli:main"

[tool.setuptools.packages.find]
include = ["fisher_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.package-data]
"fisher_ai.chess" = ["LICENSE.txt", "NOTICE"]
